--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "owomoney",
-    "slug": "owomoney",
+    "slug": "owomonie",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -19,16 +19,28 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adpative-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.owomonie.owomonie"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "2c9a782e-9b52-4383-b174-d668ba18769b"
+      }
+    },
+    "owner": "owomonie"
   }
 }
