--- a/package.json
+++ b/package.json
@@ -17,44 +17,41 @@
   "dependencies": {
     "@expo-google-fonts/anton": "^0.2.3",
     "@expo-google-fonts/antonio": "^0.2.3",
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-navigation/native": "^6.0.2",
-    "@reduxjs/toolkit": "^2.2.7",
-    "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/native": "^7.0.14",
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
+    "expo": "^52.0.23",
+    "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.7",
+    "expo-font": "~13.0.2",
+    "expo-linear-gradient": "^14.0.1",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.15",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.6",
+    "expo-web-browser": "~14.0.1",
     "moti": "^0.29.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-toast-message": "^2.2.0",
+    "nanoid": "^5.0.9",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "redux-thunk": "^3.1.0",
-    "expo-dev-client": "~4.0.26"
+    "react-redux": "^9.2.0",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "@babel/core": "^7.26.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "~18.3.12",
+    "typescript": "~5.7.2"
   },
   "private": true
 }
