--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-EXPO_PUBLIC_API_URL=https://owomonie-backend-v1.onrender.com/
+#EXPO_PUBLIC_API_URL=https://owomonie-backend-v1.onrender.com/
+EXPO_PUBLIC_API_URL=https://fresh-donuts-relax.loca.lt/
 
