--- a/app.json
+++ b/app.json
@@ -21,16 +21,15 @@
         "foregroundImage": "./assets/images/adpative-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.owomonie.owomonie"
+      "package": "com.owomonie.owomonie",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router"
-    ],
+    "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
     },
