--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "expo": "^52.0.23",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.7",
+    "expo-device": "^7.0.1",
     "expo-font": "~13.0.2",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
+    "expo-notifications": "^0.29.11",
     "expo-router": "~4.0.15",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
