--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-#EXPO_PUBLIC_API_URL=https://owomonie-backend-v1.onrender.com/
-EXPO_PUBLIC_API_URL=https://legal-humans-boil.loca.lt/
+EXPO_PUBLIC_API_URL=https://owomonie-backend-v1.onrender.com/
+# EXPO_PUBLIC_API_URL=https://nasty-rabbits-kick.loca.lt/
 
