--- a/app.json
+++ b/app.json
@@ -26,14 +26,23 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.owomonie.owomonie",
-      "googleServicesFile": "./google-services.json"
+      "googleServicesFile": "./google-services.json",
+      "permissions": ["USE_BIOMETRIC"]
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-local-authentication",
+        {
+          "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID."
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     },
