--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.2.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "expo-local-authentication": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
