--- a/app.json
+++ b/app.json
@@ -39,7 +39,7 @@
       [
         "expo-local-authentication",
         {
-          "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID."
+          "faceIDPermission": "Allow Owomonie to use Face ID."
         }
       ]
     ],
