--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-font": "~13.0.2",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
+    "expo-local-authentication": "~15.0.1",
     "expo-notifications": "^0.29.11",
     "expo-router": "~4.0.15",
     "expo-splash-screen": "~0.29.18",
@@ -44,11 +45,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.2.0",
-    "redux-thunk": "^3.1.0",
-    "expo-local-authentication": "~15.0.1"
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
