--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.5.0",
+    "@shopify/flash-list": "1.7.1",
     "axios": "^1.7.9",
     "expo": "^52.0.23",
     "expo-constants": "~17.0.3",
@@ -42,6 +43,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-plaid-link-sdk": "^12.0.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
@@ -49,8 +51,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.2.0",
-    "redux-thunk": "^3.1.0",
-    "@shopify/flash-list": "1.7.1"
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
