--- a/package.json
+++ b/package.json
@@ -15,49 +15,46 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo-google-fonts/anton": "^0.2.3",
-    "@expo-google-fonts/antonio": "^0.2.3",
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.5.0",
     "@shopify/flash-list": "1.7.1",
     "axios": "^1.7.9",
-    "expo": "^52.0.23",
-    "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.7",
-    "expo-device": "^7.0.1",
-    "expo-font": "~13.0.2",
-    "expo-linear-gradient": "^14.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-local-authentication": "~15.0.1",
-    "expo-notifications": "^0.29.11",
-    "expo-router": "~4.0.15",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo": "~52.0.31",
+    "expo-constants": "~17.0.5",
+    "expo-dev-client": "~5.0.11",
+    "expo-device": "~7.0.2",
+    "expo-font": "~13.0.3",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-local-authentication": "~15.0.2",
+    "expo-notifications": "~0.29.13",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
+    "expo-web-browser": "~14.0.2",
     "moti": "^0.29.0",
-    "nanoid": "^5.0.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-plaid-link-sdk": "^12.0.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
+    "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
-    "typescript": "~5.7.2"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
