--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # EXPO_PUBLIC_API_URL=https://owomonie-backend-v1.onrender.com/
-EXPO_PUBLIC_API_URL=  https://ce8d-148-252-145-219.ngrok-free.app/  
+EXPO_PUBLIC_API_URL=https://22fd-85-255-236-128.ngrok-free.app/  
 
