--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # EXPO_PUBLIC_API_URL=https://owomonie-backend-v1.onrender.com/
-EXPO_PUBLIC_API_URL=https://22fd-85-255-236-128.ngrok-free.app/  
+EXPO_PUBLIC_API_URL=https://0a32-85-255-232-54.ngrok-free.app/  
 
