--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # EXPO_PUBLIC_API_URL=https://owomonie-backend-v1.onrender.com/
-EXPO_PUBLIC_API_URL=https://legal-mirrors-stick.loca.lt/  
+EXPO_PUBLIC_API_URL=https://0e7a-148-252-146-210.ngrok-free.app/  
 
