--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@shopify/flash-list": "1.7.1",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.31",
     "expo-constants": "~17.0.5",
     "expo-dev-client": "~5.0.11",
