--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-# EXPO_PUBLIC_API_URL=https://owomonie-backend-v1.onrender.com/
-EXPO_PUBLIC_API_URL=https://d509-148-252-146-178.ngrok-free.app/  
-
+EXPO_PUBLIC_API_URL=https://owomonie-backend-v1.onrender.com/
