--- a/app.json
+++ b/app.json
@@ -33,6 +33,9 @@
       "permissions": [
         "USE_BIOMETRIC",
         "android.permission.USE_BIOMETRIC",
+        "android.permission.USE_FINGERPRINT",
+        "USE_BIOMETRIC",
+        "android.permission.USE_BIOMETRIC",
         "android.permission.USE_FINGERPRINT"
       ]
     },
@@ -61,6 +64,12 @@
         "projectId": "994f7f58-c991-44ae-867b-935b0eecc4a6"
       }
     },
-    "owner": "yommexg"
+    "owner": "yommexg",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/994f7f58-c991-44ae-867b-935b0eecc4a6"
+    }
   }
 }
