--- a/eas.json
+++ b/eas.json
@@ -1,50 +1,50 @@
 // Development
-{
-  "cli": {
-    "version": ">= 14.2.0",
-    "appVersionSource": "remote",
-    "requireCommit": true
-  },
-  "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
-    "preview": {
-      "distribution": "internal"
-    },
-    "production": {
-      "autoIncrement": true
-    }
-  },
-  "submit": {
-    "production": {}
-  }
-}
-
-// Production
 // {
+//   "cli": {
+//     "version": ">= 14.2.0",
+//     "appVersionSource": "remote",
+//     "requireCommit": true
+//   },
 //   "build": {
+//     "development": {
+//       "developmentClient": true,
+//       "distribution": "internal"
+//     },
 //     "preview": {
-//       "android": {
-//         "buildType": "apk"
-//       }
-//     },
-//     "preview2": {
-//       "android": {
-//         "gradleCommand": ":app:assembleRelease"
-//       }
-//     },
-//     "preview3": {
-//       "developmentClient": true
-//     },
-//     "preview4": {
 //       "distribution": "internal"
 //     },
 //     "production": {
-//       "android": {
-//         "buildType": "apk"
-//       }
+//       "autoIncrement": true
 //     }
+//   },
+//   "submit": {
+//     "production": {}
 //   }
 // }
+
+// Production
+{
+  "build": {
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "preview4": {
+      "distribution": "internal"
+    },
+    "production": {
+      "android": {
+        "buildType": "apk"
+      }
+    }
+  }
+}
