--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
+    "expo-updates": "^0.27.1",
     "expo-web-browser": "~14.0.2",
     "moti": "^0.29.0",
     "react": "18.3.1",
@@ -51,8 +52,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
-    "redux-thunk": "^3.1.0",
-    "expo-updates": "~0.27.1"
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
